Preloading background images for seamless animation

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="terminal-body">
             <div id="resume-container"></div>
         </div>
-        <div class="terminal-status-bar">Status: Ready (to work)</div>
+        <div class="terminal-status-bar">Status: Ready to work!</div>
         <div class="grippy" id="grippy"></div>
     </div>
 </div>
