Renamed terminal.js to window.js

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
         </div>
     </template>
 
-    <script src="terminal.js"></script>
+    <script src="window.js"></script>
 </body>
 </html>
