Changed page title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tucker McLean | Resume</title>
+    <title>Tucker McLean | Devoted IT Professional | AWS Enthusiast | Linux &amp; Networking Expert</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
