Changed 34+ years to over 3 decades

--- a/intro.html
+++ b/intro.html
@@ -1,6 +1,6 @@
 <header>
     <h1>Hi, I'm Tucker McLean.<span class="blink"></span></h1>
-    <h2>I have 34+ years of experience exploring, building, and optimizing technology.🖥️💾⚙️</h2>
+    <h2>I have over 3 decades of experience exploring, building, and optimizing technology.🖥️💾⚙️</h2>
 </header>
 <section>
     <p>I'm not one to toot my own horn, but I come by it honestly. There's one thing you should know about me: I care
