--- a/welcome.html
+++ b/welcome.html
@@ -1,6 +1,6 @@
 <header>
     <h1>Hi, I'm Tucker McLean.<span class="blink"></span></h1>
-    <h2>I've spent 34+ years building, optimizing, and maintaining systems that just work.🧙‍♂️🪄🖥️</h2>
+    <h2>I've spent over 3 decades building, optimizing, and maintaining systems that just work.🧙‍♂️🪄🖥️</h2>
 </header>
 <section>
     <div style="display: flex; justify-content: space-around;">
