Fixed up resume

--- a/resume.html
+++ b/resume.html
@@ -1,52 +1,43 @@
 <header>
     <h1>Tucker McLean<span class="blink"></span></h1>
-    <p>Devoted IT Professional <span class="directory">|</span> AWS Enthusiast <span class="executable">|</span> Linux & Networking Expert</p>
-    <p>Beaverton, Oregon, United States</p>
-    <ul>
-        <li><a href="mailto:me@tuckermclean.com">me@tuckermclean.com</a></li>
-        <li><a href="https://www.linkedin.com/in/tucker-mclean">www.linkedin.com/in/tucker-mclean</a> (LinkedIn)</li>
-    </ul>
+    <p class="center"><span class="nowrap">Beaverton, OR</span> <span class="directory">|</span> <a href="tel:+18124304200">+1 812 430 4200</a> <span class="symlink">|</span> <a href="mailto:me@tuckermclean.com">me@tuckermclean.com</a> <span class="executable">|</span> <a href="https://linkedin.com/in/tucker-mclean-217634102" target="_blank">linkedin.com/in/tucker-mclean-217634102</a></p>
+    <h3 style="float: none;" class="center">Cloud Engineer</h3>
+    <p class="center"><span class="nowrap">Devoted IT Professional</span> <span class="executable">|</span> <span class="nowrap">Linux and Networking Expert</span> <span class="symlink">|</span> <span class="nowrap">Open-Source Technologies</span></p>
 </header>
 <section>
     <h2>Summary</h2>
-    <p>Devoted IT professional with over two decades of hands-on experience in Linux, Windows, and networking technologies. I love enabling the team to do more by automating processes and providing expertise and TLC where the team needs it most. I'm an AWS Certified Cloud Practitioner.</p>
+    <p>Devoted Cloud Engineer and AWS Certified Cloud Practitioner with a proven track record of delivering innovative solutions in Linux, networking, and cloud technologies, ensuring scalable and efficient systems. Maximizes team productivity by automating processes and providing expertise and tactful feedback where the team needs it most.</p>
 </section>
 <section>
-    <h2>Top Skills</h2>
+    <h2>Core Competencies</h2>
     <ul>
         <li>Network Infrastructure</li>
         <li>Linux</li>
         <li>Amazon Web Services (AWS)</li>
     </ul>
-    <h2>Certifications</h2>
-    <ul>
-        <li>AWS Certified Cloud Practitioner</li>
-        <li>CompTIA A+</li>
-    </ul>
 </section>
 <section>
     <h2>Experience</h2>
     <article>
-        <h3>Intel Corporation</h3>
-        <p>2 years 4 months</p>
+        <h3>Intel Corporation<span class="location">, Hillsboro, Oregon</span></h3>
+        <p class="date">June 2022 - September 2024</p>
         <h4>Technology Project/Program Management Analyst</h4>
-        <p>April 2024 - September 2024 (6 months)</p>
-        <p>Hillsboro, Oregon, United States</p>
+        <p class="date">April 2024 - September 2024</p>
+        <p class="summary">Served as SWLC liaison, software release coordinator, disseminator of technical and security advisories, and beacon of truth and knowledge.</p>
         <ul>
-            <li>Served as the liaison for Software Legal Compliance (SWLC) for software and firmware releases from Intel's Ethernet Product Division within the greater Network and Edge Solutions Group (NESG IEPD)</li>
+            <li>Served as the liaison for Software Legal Compliance (SWLC) for software and firmware releases from Intel's Ethernet Product Division within the greater Network and Edge Solutions Group (NESG IEPD).</li>
             <li>Provided pre-release and final builds and release packages of NIC drivers, firmware, and tools to program managers serving our top-tier server customers as well as our other accounts, following all SWLC and security protocols.</li>
-            <li>Curated a PowerBI dashboard providing visibility of published Technical and Security Advisories to key stakeholders and customers of Intel's Network and Edge Group (NEX),</li>
-            <li>Stood as a beacon of truth and knowledge for the teams making use of the IEPD Core Ethernet Technology validation lab, guiding the validation technicians and spearheading the development and maintenance of the lab with various server, network switching and vRAN technologies</li>
+            <li>Curated a PowerBI dashboard providing visibility of published Technical and Security Advisories to key stakeholders and customers of Intel's Network and Edge Group (NEX).</li>
+            <li>Stood as a beacon of truth and knowledge for the teams making use of the IEPD Core Ethernet Technology validation lab, guiding the validation technicians and spearheading the development and maintenance of the lab with various server, network switching and vRAN technologies.</li>
             <li>Enabled application engineering functions, providing critical knowledge of and expertise with Linux and networking technologies, serving our top-tier customers and other accounts.</li>
         </ul>
         <h4>Network Product Validation Technician</h4>
-        <p>June 2022 - April 2024 (1 year 11 months)</p>
-        <p>Hillsboro, Oregon, United States</p>
+        <p class="date">June 2022 - April 2024</p>
+        <p class="summary">Spearheaded validation testing and customer issue reproduction for Intel-based NICs, firmware, and drivers with Linux, Windows, VMware ESXi, and other OSs, reinforcing team confidence with critical expertise.</p>
         <ul>
-            <li>Spearheaded validation testing and customer issue reproduction for Intel-based NICs, firmware, and drivers with Linux, Windows, VMware ESXi, and other OSs, reinforcing team confidence with critical expertise.</li>
             <li>Designed an OS deployment system, custom-engineered using Python and RHEL, showcasing expertise in boot processes — from legacy and UEFI methods to PXE booting across multiple OS platforms — streamlined by automation of key network services, including HTTP, DHCP, DNS, TFTP, NFS, and Samba.</li>
-            <li>Directed lab automation projects, including the automation of OS installs, validation tests, issue reproductions, driver builds and installations, package mirrors for Linux distros, and switch configuration management</li>
-            <li>Leveraged Git and GitHub for revision control, Vagrant and VMware Workstation for building virtual development environments</li>
+            <li>Directed lab automation projects, including the automation of OS installs, validation tests, issue reproductions, driver builds and installations, package mirrors for Linux distros, and switch configuration management.</li>
+            <li>Leveraged Git and GitHub for revision control, Vagrant and VMware Workstation for building virtual development environments.</li>
             <li>Employed Python, bash, PowerShell, and Windows batch scripting, merging experiential knowledge and targeted research to enhance lab operations.</li>
             <li>Oversaw a dynamic network environment with an array of server and switch brands including Cisco, HP, Lenovo, SuperMicro, and more.</li>
             <li>Proactively embraced new tasks, including mastering Intel’s build system to enable special NIC driver and firmware releases, and conducting a pivotal visit to a large, prestigious retail customer's network validation lab.</li>
@@ -55,12 +46,11 @@
         </ul>
     </article>
     <article>
-        <h3>Kelly Services @ Intel</h3>
+        <h3>Kelly Services @ Intel<span class="location">, Hillsboro, Oregon</span></h3>
         <h4>Engineer I</h4>
-        <p>August 2021 - June 2022 (11 months)</p>
-        <p>Hillsboro, Oregon, United States</p>
+        <p class="date">August 2021 - June 2022</p>
+        <p class="summary">Conducted validation testing and customer issue reproduction for Intel-based NICs, firmware, and drivers with Linux, Windows, VMware ESXi, and other OSs.</li>
         <ul>
-            <li>Conducted validation testing and customer issue reproduction for Intel-based NICs, firmware, and drivers with Linux, Windows, VMware ESXi, and other OSs.</li>
             <li>Collaborated with an array of internal stakeholders, ranging from engineers and managers to technical leads, ensuring their requirements were met efficiently.</li>
             <li>Managed and maintained switch and server hardware from diverse manufacturers in a lab/datacenter setting.</li>
             <li>Custom-engineered and deployed test environments, facilitating enhanced debugging and validation using optimal hardware-software combinations.</li>
@@ -70,10 +60,9 @@
         </ul>
     </article>
     <article>
-        <h3>Bertram Communications</h3>
+        <h3>Bertram Communications<span class="location">, Random Lake, Wisconsin</span></h3>
         <h4>PHP Developer / Support Agent</h4>
-        <p>November 2019 - March 2021 (1 year 5 months)</p>
-        <p>Random Lake, Wisconsin, United States</p>
+        <p class="date">November 2019 - March 2021</p>
         <ul>
             <li>Developed and fine-tuned ISP management software, addressing bugs and incorporating new features using PHP, JavaScript, SQL, bash, and Tcl.</li>
             <li>Executed major development projects, including overhauling the installation system and implementing the support for DHCP option 82.</li>
@@ -86,35 +75,32 @@
         </ul>
     </article>
     <article>
-        <h3>Lakeshore Technical College</h3>
+        <h3>Lakeshore Technical College<span class="location">, Cleveland, Wisconsin</span></h3>
         <h4>IT Support</h4>
-        <p>June 2019 - November 2019 (6 months)</p>
-        <p>Cleveland, Wisconsin, United States</p>
+        <p class="date">June 2019 - November 2019</p>
         <ul>
             <li>Provided IT assistance to stakeholders within a Windows enterprise network.</li>
             <li>Delivered both technical and hands-on support, ensuring a smooth user experience and prompt issue resolution.</li>
         </ul>
     </article>
-    <article>
-        <h3>Central Oregon Internet</h3>
-        <h4>Technical Support / Linux System Administrator</h4>
-        <p>March 2002 - June 2003 (1 year 4 months)</p>
-        <p>Bend, Oregon, United States</p>
-        <ul>
-            <li>Delivered tier 1 & 2 technical support to customers, spanning across diverse systems such as Windows (all versions), Mac OS, and Linux, ensuring prompt issue resolution and elevated user satisfaction.</li>
-            <li>Maintained and optimized Debian Linux servers, ensuring uninterrupted and efficient performance.</li>
-            <li>Spearheaded the design and implementation of a Java-based interface for the Asterisk VoIP phone system, enhancing call management and user experience.</li>
-            <li>Championed the transition from a legacy server infrastructure to a modernized framework, mitigating potential system inefficiencies.</li>
-            <li>Played a pivotal role in introducing a comprehensive spam and virus control system, bolstering security and user trust.</li>
-            <li>Engaged in various strategic projects, consistently elevating the company's technological infrastructure and service offerings.</li>
-        </ul>
-    </article>
+</section>
+<section>
+    <h2>Additional Relevant Experience</h2>
+    <h3>Central Oregon Internet<span class="location">, Bend, Oregon</span></h3>
+    <p class="summary">Technical Support | Linux System Administrator</p>
 </section>
 <section>
     <h2>Education</h2>
-    <p>Lakeshore College</p>
-    <p>38 credits completed toward Associate's Degree, IT Networking · (September 2018 - December 2019)</p>
+    <h3>Lakeshore Technical College</h3>
+    <p class="summary">Associate's Coursework in IT Networking</p>
+</section>
+<section>
+    <h2>Certifications</h2>
+    <ul>
+        <li>CompTIA A+</li>
+        <li>AWS Certified Cloud Practitioner</li>
+    </ul>
 </section>
 <footer>
-    <p>&copy; 2024 Tucker McLean</p>
+    <p class="center"><em>References available upon request</em></p>
 </footer>
