Changed and to &

--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
     <h1>Tucker McLean<span class="blink"></span></h1>
     <p class="center"><span class="nowrap">Beaverton, OR</span> <span class="directory">|</span> <a href="tel:+18124304200">+1 812 430 4200</a> <span class="symlink">|</span> <a href="mailto:me@tuckermclean.com">me@tuckermclean.com</a> <span class="executable">|</span> <a href="https://linkedin.com/in/tucker-mclean" target="_blank">linkedin.com/in/tucker-mclean</a></p>
     <h3 style="float: none;" class="center">Cloud Engineer</h3>
-    <p class="center"><span class="nowrap">Devoted IT Professional</span> <span class="executable">|</span> <span class="nowrap">Linux and Networking Expert</span> <span class="symlink">|</span> <span class="nowrap">Open-Source Technologies</span></p>
+    <p class="center"><span class="nowrap">Devoted IT Professional</span> <span class="executable">|</span> <span class="nowrap">Linux &amp; Networking Expert</span> <span class="symlink">|</span> <span class="nowrap">Open-Source Technologies</span></p>
 </header>
 <section>
     <h2>Summary</h2>
