Cascading windows now resets them

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <div class="menu-separator"></div>
         <div class="menu-item" onclick="toggleMode();">Toggle Mode</div>
         <div class="menu-separator"></div>
-        <div class="menu-item" onclick="cascadeWindows();">Cascade</div>
-        <div class="menu-item" onclick="tileWindows();">Tile</div>
+        <div class="menu-item" onclick="cascadeWindows();">Cascade Windows</div>
+        <div class="menu-item" onclick="tileWindows();">Tile Windows</div>
     </div>
  
     <!-- Template for window -->
