--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,6 @@
 <header>
     <h1>Tucker McLean<span class="blink"></span></h1>
-    <p class="center"><span class="nowrap">Beaverton, OR</span> <span class="directory">|</span> <a href="tel:+18124304200">+1 812 430 4200</a> <span class="symlink">|</span> <a href="mailto:me@tuckermclean.com">me@tuckermclean.com</a> <span class="executable">|</span> <a href="https://linkedin.com/in/tucker-mclean" target="_blank">linkedin.com/in/tucker-mclean</a></p>
+    <p class="center"><span class="nowrap">Beaverton, Oregon USA</span> <span class="directory">|</span> <a href="tel:+18124304200">+1 812 430 4200</a> <span class="symlink">|</span> <a href="mailto:me@tuckermclean.com">me@tuckermclean.com</a> <span class="executable">|</span> <a href="https://linkedin.com/in/tucker-mclean" target="_blank">linkedin.com/in/tucker-mclean</a></p>
     <h3 style="float: none;" class="center">Cloud Engineer</h3>
     <p class="center"><span class="nowrap">Devoted IT Professional</span> <span class="executable">|</span> <span class="nowrap">Linux &amp; Networking Expert</span> <span class="symlink">|</span> <span class="nowrap">Open-Source Technologies</span></p>
 </header>
@@ -47,8 +47,8 @@
     </article>
     <article>
         <h3>Kelly Services @ Intel<span class="location">, Hillsboro, Oregon</span></h3>
-        <h4>Engineer I</h4>
         <p class="date">August 2021 - June 2022</p>
+        <h4>Engineer I</h4>
         <p class="summary">Conducted validation testing and customer issue reproduction for Intel-based NICs, firmware, and drivers with Linux, Windows, VMware ESXi, and other OSs.</li>
         <ul>
             <li>Collaborated with an array of internal stakeholders, ranging from engineers and managers to technical leads, ensuring their requirements were met efficiently.</li>
@@ -61,8 +61,8 @@
     </article>
     <article>
         <h3>Bertram Communications<span class="location">, Random Lake, Wisconsin</span></h3>
-        <h4>PHP Developer / Support Agent</h4>
         <p class="date">November 2019 - March 2021</p>
+        <h4>PHP Developer / Support Agent</h4>
         <ul>
             <li>Developed and fine-tuned ISP management software, addressing bugs and incorporating new features using PHP, JavaScript, SQL, bash, and Tcl.</li>
             <li>Executed major development projects, including overhauling the installation system and implementing the support for DHCP option 82.</li>
@@ -76,8 +76,8 @@
     </article>
     <article>
         <h3>Lakeshore Technical College<span class="location">, Cleveland, Wisconsin</span></h3>
-        <h4>IT Support</h4>
         <p class="date">June 2019 - November 2019</p>
+        <h4>IT Support</h4>
         <ul>
             <li>Provided IT assistance to stakeholders within a Windows enterprise network.</li>
             <li>Delivered both technical and hands-on support, ensuring a smooth user experience and prompt issue resolution.</li>
