Replaced a stray em-dash

--- a/welcome.html
+++ b/welcome.html
@@ -20,5 +20,5 @@
         systems--technical and organizational. I see the big picture, find inefficiencies, and deliver reliable
         solutions that stand the test of time.</p>
     <p>Now, I'm expanding into <strong>AWS</strong> to bring scalable, efficient systems into the cloud.</p>
-    <p>If you need someone who sees both the forest <em>and</em> the trees—and gets things done--let's talk.</p>
+    <p>If you need someone who sees both the forest <em>and</em> the trees--and gets things done--let's talk.</p>
 </section>
