--- a/intro.html
+++ b/intro.html
@@ -14,7 +14,7 @@
         touch--balancing the customer's experience with the moment's technical realities. Since then, I've evolved into
         a quiet force in IT: someone who builds and solves, who speaks only when there's something worth saying. When I
         do, the room listens.</p>
-    <p>At Intel, I wore many hats and saw solutions where others saw chaos. When our team faced a lab move that left us
+    <p>At <strong>Intel</strong>, I wore many hats and saw solutions where others saw chaos. When our team faced a lab move that left us
         without network infrastructure, I built a complete environment from scratch. I repurposed servers, ran 100G
         fiber, and configured Cisco and Extreme switches. I set up a dynamic PXE boot environment, automated OS
         deployments with Python, and built firewall rules for our lab bastion server. The result?</p>
