Resume tweaks; add emojis to date and location

--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
 <section>
     <h2>Experience</h2>
     <article>
-        <h3>Intel Corporation<span class="location">, Hillsboro, Oregon</span></h3>
+        <h3>Intel Corporation <span class="location">Hillsboro, Oregon</span></h3>
         <p class="date">June 2022 - September 2024</p>
         <h4>Technology Project/Program Management Analyst</h4>
         <p class="date">April 2024 - September 2024</p>
@@ -33,20 +33,20 @@
         </ul>
         <h4>Network Product Validation Technician</h4>
         <p class="date">June 2022 - April 2024</p>
-        <p class="summary">Spearheaded validation testing and customer issue reproduction for Intel-based NICs, firmware, and drivers with Linux, Windows, VMware ESXi, and other OSs, reinforcing team confidence with critical expertise.</p>
+        <p class="summary">Spearheaded validation testing and customer issue reproduction for Intel-based NICs, firmware, and drivers with Linux, Windows, VMware ESXi, and other OSs, reinforcing team confidence with critical expertise, saving many hours and thousands of dollars.</p>
         <ul>
-            <li>Designed an OS deployment system, custom-engineered using Python and RHEL, showcasing expertise in boot processes — from legacy and UEFI methods to PXE booting across multiple OS platforms — streamlined by automation of key network services, including HTTP, DHCP, DNS, TFTP, NFS, and Samba.</li>
-            <li>Directed lab automation projects, including the automation of OS installs, validation tests, issue reproductions, driver builds and installations, package mirrors for Linux distros, and switch configuration management.</li>
+            <li>Designed an OS deployment system, custom-engineered using Python and RHEL, showcasing expertise in boot processes -- from legacy and UEFI methods to PXE booting across multiple OS platforms -- streamlined by automation of key network services, including HTTP, DHCP, DNS, TFTP, NFS, and Samba, saving the company thousands by repurposing "scrap" hardware</li>
+            <li>Directed lab automation projects, including the automation of OS installs, validation tests, issue reproductions, driver builds and installations, package mirrors for Linux distros, and switch configuration management, saving many hours through elimination of manual tasks.</li>
             <li>Leveraged Git and GitHub for revision control, Vagrant and VMware Workstation for building virtual development environments.</li>
-            <li>Employed Python, bash, PowerShell, and Windows batch scripting, merging experiential knowledge and targeted research to enhance lab operations.</li>
+            <li>Employed Python, bash, PowerShell, and Windows batch scripting, merging experiential knowledge and targeted research to enhance lab operations, freeing technicians and engineers from grunt-work and improving customer satisfaction.</li>
             <li>Oversaw a dynamic network environment with an array of server and switch brands including Cisco, HP, Lenovo, SuperMicro, and more.</li>
-            <li>Proactively embraced new tasks, including mastering Intel’s build system to enable special NIC driver and firmware releases, and conducting a pivotal visit to a large, prestigious retail customer's network validation lab.</li>
+            <li>Proactively embraced new tasks, including mastering Intel's build system to enable special NIC driver and firmware releases, and conducting a pivotal visit to a large, prestigious retail customer's network validation lab.</li>
             <li>Cultivated relationships across the organization, frequently navigating new technical domains, emerging as a go-to source for insights on Linux, networking, and automation.</li>
             <li>Continuously elevated operations by harnessing online research skills, fostering improved operations.</li>
         </ul>
     </article>
     <article>
-        <h3>Kelly Services @ Intel<span class="location">, Hillsboro, Oregon</span></h3>
+        <h3>Kelly Services @ Intel <span class="location">Hillsboro, Oregon</span></h3>
         <p class="date">August 2021 - June 2022</p>
         <h4>Engineer I</h4>
         <p class="summary">Conducted validation testing and customer issue reproduction for Intel-based NICs, firmware, and drivers with Linux, Windows, VMware ESXi, and other OSs.</li>
@@ -54,19 +54,19 @@
             <li>Collaborated with an array of internal stakeholders, ranging from engineers and managers to technical leads, ensuring their requirements were met efficiently.</li>
             <li>Managed and maintained switch and server hardware from diverse manufacturers in a lab/datacenter setting.</li>
             <li>Custom-engineered and deployed test environments, facilitating enhanced debugging and validation using optimal hardware-software combinations.</li>
-            <li>Acted as the team’s primary consultant for Linux usage and configurations across various distributions, streamlining operational processes.</li>
+            <li>Acted as the team's primary consultant for Linux usage and configurations across various distributions, streamlining operational processes.</li>
             <li>Devised and implemented automated scripts and processes using Python, bash, and Ansible, driving operational efficiency.</li>
             <li>Regularly harnessed online resources such as corporate wikis, knowledge bases, and forums to acquire and apply technical information.</li>
         </ul>
     </article>
     <article>
-        <h3>Bertram Communications<span class="location">, Random Lake, Wisconsin</span></h3>
+        <h3>Bertram Communications <span class="location">Random Lake, Wisconsin</span></h3>
         <p class="date">November 2019 - March 2021</p>
         <h4>PHP Developer / Support Agent</h4>
         <ul>
             <li>Developed and fine-tuned ISP management software, addressing bugs and incorporating new features using PHP, JavaScript, SQL, bash, and Tcl.</li>
             <li>Executed major development projects, including overhauling the installation system and implementing the support for DHCP option 82.</li>
-            <li>Built and maintained a development lab, equipped with Proxmox VM servers, routers, switches, and Cambium wireless equipment.</li>
+            <li>Built and maintained a development lab, equipped with Proxmox VM servers, routers, switches, and Cambium wireless equipment, improving validation of code before it goes live on customer servers, reducing customer incidents, improving code quality and customer satisfaction.</li>
             <li>Elevated the technical acumen of the development and customer experience teams, particularly in Linux and networking domains.</li>
             <li>Rendered exceptional support to wireless and fiber ISPs, customers employing our all-in-one ISP management software.</li>
             <li>Established a support test lab and curated extensive, diagram-enhanced documentation.</li>
@@ -75,7 +75,7 @@
         </ul>
     </article>
     <article>
-        <h3>Lakeshore Technical College<span class="location">, Cleveland, Wisconsin</span></h3>
+        <h3>Lakeshore Technical College <span class="location">Cleveland, Wisconsin</span></h3>
         <p class="date">June 2019 - November 2019</p>
         <h4>IT Support</h4>
         <ul>
@@ -86,7 +86,7 @@
 </section>
 <section>
     <h2>Additional Relevant Experience</h2>
-    <h3>Central Oregon Internet<span class="location">, Bend, Oregon</span></h3>
+    <h3>Central Oregon Internet <span class="location">Bend, Oregon</span></h3>
     <p class="summary">Technical Support | Linux System Administrator</p>
 </section>
 <section>
