Now, windows brought to front modify the location hash

--- a/welcome.html
+++ b/welcome.html
@@ -4,8 +4,8 @@
 </header>
 <section>
     <div style="display: flex; justify-content: space-around;">
-        <span style="font-size: 1.35em;"><a href="#" class="executable" onclick="openPage('intro', 'Introduction', '🧠');">Introduction</a></span>
-        <span style="font-size: 1.35rem;"><a href="#" class="directory" onclick="openPage('resume', 'Resume', '📜');">Resume</a></span>
+        <span style="font-size: 1.35rem;"><a href="#" class="executable" onclick="openPage('intro', 'Introduction', '🧠', event);">Introduction</a></span>
+        <span style="font-size: 1.35rem;"><a href="#" class="directory" onclick="openPage('resume', 'Resume', '📜', event);">Resume</a></span>
     </ul>
 </section>
 <section>
