Give a rollover title for the start button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Menu button (start button)-->
     <div class="start-button" id="start-button">
-        <div class="start-button-icon">☰</div>
+        <div class="start-button-icon" title="Start Here">☰</div>
     </div>
 
     <div class="tasks" id="tasks"></div>
