A little easter egg at the end of the resume

--- a/resume.html
+++ b/resume.html
@@ -103,4 +103,5 @@
 </section>
 <footer>
     <p class="center"><em>References available upon request</em></p>
+    <p class="center moai"></p>
 </footer>
