--- a/welcome.html
+++ b/welcome.html
@@ -4,8 +4,8 @@
 </header>
 <section>
     <div style="display: flex; justify-content: space-around;">
-        <span style="font-size: 1.35rem;"><a href="#" class="executable" onclick="navigateToPage('window-welcome', 'intro', 'Introduction', '🧠');">Introduction</a></span>
-        <span style="font-size: 1.35rem;"><a href="#" class="directory" onclick="navigateToPage('window-welcome', 'resume', 'Resume', '📜');">Resume</a></span>
+        <span style="font-size: 1.35rem;"><a href="#/intro" class="executable">Introduction</a></span>
+        <span style="font-size: 1.35rem;"><a href="#/resume" class="directory">Resume</a></span>
     </ul>
 </section>
 <section>
