Resume link at bottom of intro

--- a/intro.html
+++ b/intro.html
@@ -50,4 +50,5 @@
         of heart for what I do. After over three decades in tech, I'm just as excited today as I was in 1990.</p>
     <p>Sincerely,</p>
     <p>TM❤️</p>
+    <p class="center" style="font-size: 1.35rem;"><a href="#/resume" class="directory">Resume</a></p>
 </section>
