Added Vite for better support for libraries

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tucker McLean | Devoted IT Professional | AWS Enthusiast | Linux &amp; Networking Expert</title>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
 </head>
 <body>
     <!-- Menu button (start button)-->
@@ -48,6 +47,6 @@
         </div>
     </template>
 
-    <script src="window.js"></script>
+    <script type="module" src="/src/main.js"></script>
 </body>
 </html>
