--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="not-loaded">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tucker McLean | Devoted IT Professional | AWS Enthusiast | Linux &amp; Networking Expert</title>
+    <style>
+        html.not-loaded * {
+            background: black !important;
+            color: black !important;
+        }
+    </style>
 </head>
 <body>
     <!-- Menu button (start button)-->
